--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Hello Netaji! NPR hi NRC banega!" />
+  <meta name="description" content="Hello Netaji!" />
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
